[gd_scene load_steps=3 format=3 uid="uid://gbhte6fhi4k2"]

[ext_resource type="Script" path="res://addons/terrain_debugger/controls/bit_button.gd" id="1_qh7ao"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tv1uo"]

[node name="BitButton" type="Button"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_tv1uo")
flat = true
alignment = 0
script = ExtResource("1_qh7ao")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="PriorityContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PriorityBkgRect" type="ColorRect" parent="PriorityContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
color = Color(0.478431, 0.478431, 0.478431, 0.509804)

[node name="PriorityIcon" type="TextureRect" parent="PriorityContainer"]
unique_name_in_owner = true
visible = false
clip_contents = true
layout_mode = 2
mouse_filter = 2
stretch_mode = 3

[node name="PriorityLabel" type="Label" parent="PriorityContainer"]
unique_name_in_owner = true
visible = false
clip_contents = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "-1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
